# incplan

./: .gitignore  README.md
experiment/: collectData  runExperiment  runMadagascar  runSingleIncrementalExperiment  runSingleMadagascar  runSrt
experiment/icaps17/: README  resultAnalysis.ipynb
experiment/icaps17/.ipynb_checkpoints/: resultAnalysis-checkpoint.ipynb
experiment/pyscripts/: configBenchmark.json  configExtractProblems.json  configIntegrationTest.json  configListProblems.json  configMinorBenchmark.json  problemList.json
src/: CMakeLists.txt  DimspecProblem.cpp  DimspecProblem.h  Lingeling.cpp  PDR.cpp  PDR.h  TimePointBasedSolver.cpp  TimePointBasedSolver.h  TimeSlotMapping.h  TimeoutClock.h  incplan.cpp  ipasirprint.cpp  logging.h  main.cpp  misc.h
src/CMake/: gtest-download.cmake
src/carj/: carj.cpp  carj.h  logging.h
src/libs/ipasir/: ipasir.h  ipasir_cpp.cpp  ipasir_cpp.h  ipasir_dummy_impl.cpp  printer.h  randomized_ipasir.h
src/libs/ipasir/test/: mock_ipasir_cpp.h
src/unit_tests/: TestTimePointBasedSolver.cpp  TestTimeSlotMapping.cpp
testdata/: mini1.cnf  mini2.cnf
